--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Code\" />
+    <Folder Include="Code\Controllers\" />
+    <Folder Include="Configuration\" />
+    <Folder Include="Code\Utils\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Properties\global.json" />
+  </ItemGroup>
 </Project>
