add user secrets

--- a/backend/Configuration/appsettings.json
+++ b/backend/Configuration/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenWeatherAPI": {
+    "APISecret": "Connection weather API secret"
+  }
 }
